--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,12 +1,13 @@
 security:
     encoders:
         App\Entity\User:
-            algorithm: argon2i
+            algorithm: bcrypt
 
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         # used to reload user from session & other features (e.g. switch_user)
-        app_user_provider:
+        # app_user_provider:
+        database_users:
             entity:
                 class: App\Entity\User
                 property: email
