--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "all": "0.0.0",
         "bootstrap": "^4.3.1",
         "jquery": "^3.4.1",
         "popper.js": "^1.15.0"
